--- a/index.html
+++ b/index.html
@@ -85,20 +85,6 @@ and entirely original. At its core, being a maker is about building things that 
 </p>
     </div>
   </div>
-  <!--
-<p class="w3-large w3-center w3-padding-16">Im really good at:</p>
-  <p class="w3-wide"><i class="fa fa-camera"></i>Photography</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:90%">90%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-laptop"></i>Web Design</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:85%">85%</div>
-  </div>
-  <p class="w3-wide"><i class="fa fa-photo"></i>Photoshop</p>
-  <div class="w3-light-grey">
-    <div class="w3-container w3-padding-small w3-dark-grey w3-center" style="width:75%">75%</div>
-  </div>-->
 </div>
 
 <!-- Second Parallax Image with Portfolio Text -->
@@ -169,9 +155,12 @@ and entirely original. At its core, being a maker is about building things that 
 
 <!-- Container (Contact Section) -->
 <div class="w3-content w3-container w3-padding-64" id="contact">
-  <h3 class="w3-center">WHERE I WORK</h3>
-  <p class="w3-center"><em>I'd love your feedback!</em></p>
-
+  <h3 class="w3-center">INFORMATION</h3>
+  <p class="w3-center"><em>Contact</em></p>
+    <!--phone #-->
+    <a><button class="fill"></button></a>
+  <p class="w3-center"><em>Hire Me</em></p>
+  <p class="w3-center"><em>Work Experience</em> </p>
   <div class="w3-row w3-padding-32 w3-section">
     <div class="w3-col m4 w3-container">
       <img src="/w3images/map.jpg" class="w3-image w3-round" style="width:100%">
@@ -204,6 +193,7 @@ and entirely original. At its core, being a maker is about building things that 
 <!-- Footer -->
 <footer class="w3-center w3-black w3-padding-64 w3-opacity w3-hover-opacity-off">
   <a href="#home" class="w3-button w3-light-grey"><i class="fa fa-arrow-up w3-margin-right"></i>To the top</a>
+<!--
   <div class="w3-xlarge w3-section">
     <i class="fa fa-facebook-official w3-hover-opacity"></i>
     <i class="fa fa-instagram w3-hover-opacity"></i>
@@ -213,6 +203,7 @@ and entirely original. At its core, being a maker is about building things that 
     <i class="fa fa-linkedin w3-hover-opacity"></i>
   </div>
   <p>Powered by <a href="https://www.w3schools.com/w3css/default.asp" title="W3.CSS" target="_blank" class="w3-hover-text-green">w3.css</a></p>
+-->
 </footer>
 </body>
 </html>
