phone number updates

--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
     <div class="w3-row w3-padding-32 w3-section">
         <p class="w3-center colorText">CONTACT</p>
         <div class="w3-large w3-margin-bottom">
-            <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +01 786-823-9246 |
+            <i class="fa fa-phone fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Phone: +01 786.823.9246 |
             text preferred<br>
             <i class="fa fa-envelope fa-fw w3-hover-text-black w3-xlarge w3-margin-right"></i> Email:
             zain@accucalc.com<br>
